feat: animation 구현

--- a/src/components/ShowObject/ShowObject.scss
+++ b/src/components/ShowObject/ShowObject.scss
@@ -1,6 +1,17 @@
-.map-object {
-  animation: motion 0.6s linear 0s infinite alternate;
+.map-object-satellite {
   margin-top: 0;
+
+  animation: motion 1.2s linear 0s infinite alternate;
+  &.reverse {
+    animation: motion-reverse 1.8s linear 0s infinite alternate;
+  }
+}
+
+.map-object-probe {
+  animation: motion 0.8s linear 0s infinite alternate;
+  &.reverse {
+    animation: motion-reverse 1.5s linear 0s infinite alternate;
+  }
 }
 
 @keyframes motion {
@@ -8,6 +19,15 @@
     margin-top: 0px;
   }
   100% {
+    margin-top: 12px;
+  }
+}
+
+@keyframes motion-reverse {
+  100% {
+    margin-top: 0px;
+  }
+  0% {
     margin-top: 12px;
   }
 }
