feat: `마음 기록`에 from 정보 추가

--- a/src/components/ArchiveItem/ArchiveItem.scss
+++ b/src/components/ArchiveItem/ArchiveItem.scss
@@ -4,6 +4,10 @@
     color: #6f6856;
     font-size: 18px;
   }
+  .from {
+    color: #777777;
+    font-size: 16px;
+  }
   .content-archive {
     color: #111111;
   }
