--- a/src/components/ShowObject/ShowObject.scss
+++ b/src/components/ShowObject/ShowObject.scss
@@ -14,6 +14,18 @@
   }
 }
 
+.show-container {
+  /* Invisible by default */
+  opacity: 0;
+  pointer-events: none;
+
+  &.visible {
+
+      opacity: 1;
+      pointer-events: all;
+  }
+}
+
 @keyframes motion {
   0% {
     margin-top: 0px;
