fix: empty chrono

--- a/src/pages/Archive/Archive.scss
+++ b/src/pages/Archive/Archive.scss
@@ -1,3 +1,13 @@
 .using-icon {
   background-color: transparent;
 }
+
+.chrono-container {
+
+  visibility: visible;
+
+  &.empty {
+    visibility: hidden;
+  }
+
+}
